styles/layout.css
html:focus-within {
    scroll-behavior: smooth;
}

body {
    --bg-color: white;
    --color: black;
    --headline-color: black;
    --svg-filter: ;
    margin: 0;
    background-color: var(--bg-color);
    color: var(--color);
    color-scheme: light;
}

body.dark-theme {
    --bg-color: #231f20;
    --color: #efefef;
    --headline-color: white;
    --svg-filter: invert();
    color-scheme: dark;
}

@media (prefers-color-scheme: dark) {
    body {
        --bg-color: #231f20;
        --color: #efefef;
        --headline-color: white;
        --svg-filter: invert();
        color-scheme: dark;
    }
    body.light-theme {
        --bg-color: white;
        --color: black;
        --headline-color: black;
        --svg-filter: ;
        color-scheme: light;
    }
}

header,
main,
footer {
    padding: 1em;
}

.wrapper {
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
}

.large-wrapper {
    max-width: 1200;
    margin-left: auto;
    margin-right: auto;
}

a {
    color: inherit;
}

img,
svg {
    height: 100%;
    width: auto;
}

svg {
    filter: var(--svg-filter);
}

header {
    padding: .5em 1em;
}

nav {
    display: flex;
    height: 5rem;
}

.logo {
    display: block;
    height: inherit;
    background: white;
    outline: 2px solid white;
}

.logo svg {
    filter: none;
}

.languages {
    align-self: center;
    margin-left: auto;
    
}

.languages a svg {
    height: 1.3em;
}

.languages a {
    text-decoration: none;
    display: flex;
    gap: 0.25em;
    padding: 0.25em;
}

.languages a:hover,
.languages a:focus-visible {
    text-decoration: underline;
}

main {
    background-color: var(--bg-color);
    z-index: 2;
    position: relative;
    margin-bottom: 5rem;
}

footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
}

footer .wrapper {
    display: flex;
    gap: 0.25em 0.5em;
    align-items: center;
    flex-wrap: wrap;
}

footer span {
    margin-right: 2em;
}

button, .button {
    display: inline-block;
    border: 0;
    font-weight: 700;
    font-size: 0.8rem;
    padding: 0.6em 1em;
    text-decoration: none;
    text-transform: uppercase;
    border: 2px solid currentcolor;
    background: none;
    cursor: pointer;
}

.start {
    display: grid;
    column-gap: 2em;
    row-gap: 1em;
}

.start h1 {
    margin: 0;
    font-size: 1.5rem;
    grid-row: 1 / span 4;
    line-height: 1.2;
    font-weight: 700;
}

.start h1 span {
    display: block;
    font-size: 2.5rem;
    font-weight: 800;
    margin-bottom: 0.em;
}

.start p {
    margin: 0;
    max-width: 35em;
}

@media (min-width: 700px) {
    .start {
        grid-template-columns: repeat(6, 1fr);
    }
    .start h1 {
        text-align: right;
        grid-column: 1 / span 3;
    }
    .start p,
    .start ul {
        grid-column: span 3;
    }
}

/* @media (min-width: 800px) {
    .start {
        grid-template-columns: repeat(7, 1fr);
    }
} */

.start p:nth-child(2) {
    margin-top: 0.5em;
}

.start ul {
    margin: 0;
    padding: 0;
    display: flex;
    position: relative;
    height:  4em;
}

.start ul li {
    --animation-time: 5s;
    list-style: none;
    position: absolute;
    opacity: 0;
    font-weight: 600;
    animation-name: in-out;
    animation-duration: calc(var(--animation-time) * 5);
    animation-iteration-count: infinite;
}

@media (prefers-reduced-motion) {
    .start ul li {
        animation-name: none;
    }
}

.start ul li:nth-child(2) {
    animation-delay: var(--animation-time);
}

.start ul li:nth-child(3) {
    animation-delay: calc(var(--animation-time) * 2);
}

.start ul li:nth-child(4) {
    animation-delay: calc(var(--animation-time) * 3);
}

.start ul li:nth-child(5) {
    animation-delay: calc(var(--animation-time) * 4);
}

@keyframes in-out {
    0% {
        opacity: 0;
    }
    1.5% {
        opacity: 1;
    }
    18.5% {
        opacity: 1;
    }
    20% {
        opacity: 0;
    }
}

.toggle-wrapper {
    margin-left: auto;
}
.tgl {
    position: absolute;
    opacity: 0;
}
.tgl-btn {
    background: var(--color);
    border-radius: 2em;
    padding: 3px;
    transition: all 0.4s ease;
    display: block;
    width: 3em;
    height: 1.5em;
    position: relative;
    cursor: pointer;
    user-select: none;
}

.tgl-btn::after {
    position: relative;
    display: block;
    content: "";
    height: 100%;
    left: 0;
    border-radius: 50%;
    background: var(--bg-color);
    aspect-ratio: 1/1;
    transition: all 0.2s ease;
}
.tgl:checked + .tgl-btn:after {
    transform: translateX(3em) translateX(-100%);
}
.icon {
    width: 20px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    color: var(--bg-color);
    filter: none;
}
.icon_sun {
    left: 10%;
}
.icon_moon {
    right: 10%;
}

.sr-only {
    position:absolute;
    left:-10000px;
    top:auto;
    width:1px;
    height:1px;
    overflow:hidden;
}

